// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page Snapshots renders EmployeeCompletePage unchanged 1`] = `
<div>
  <div
    class="box-shadow"
  >
    <div
      class="notification-box"
    >
      <h1
        class="msg-title"
      >
        ユーザの登録が完了しました。 or ユーザの更新が完了しました。 or ユーザの削除が完了しました。
      </h1>
      <div
        class="notification-box-btn"
      >
        <button
          class="btn btn-primary btn-sm"
          type="button"
        >
          OK
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeConfirmPage unchanged 1`] = `
<div>
  <div
    class="row"
  >
    <form
      class="c-form box-shadow"
    >
      <ul
        class="show-data"
      >
        <li
          class="title"
        >
          <p>
            情報確認
          </p>
          <p>
            入力された情報をＯＫボタンクリックでＤＢへ保存してください
          </p>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            アカウント名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            ntmhuong
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            グループ
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nhóm 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nguyễn Thị Mai Hương
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            カタカナ氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            名カナ
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            生年月日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            1983/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            メールアドレス
          </label>
          <div
            class="col-sm col-sm-10"
          >
            メールアドレス
          </div>
        </li>
        <li
          class="form-group row d-flex  bor-none"
        >
          <label
            class="col-form-label col-sm-2"
          >
            電話番号
          </label>
          <div
            class="col-sm col-sm-10"
          >
            0914326386
          </div>
        </li>
        <li
          class="title mt-12"
        >
          <a
            href="#!"
          >
            日本語能力
          </a>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Trình độ tiếng nhật cấp 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格交付日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            失効日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            点数
          </label>
          <div
            class="col-sm col-sm-10"
          >
            290
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <div
            class="btn-group col-sm col-sm-10 ml"
          >
            <button
              class="btn btn-primary btn-sm"
              type="button"
            >
              OK
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              戻る
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeDetailPage unchanged 1`] = `
<div>
  <div
    class="row"
  >
    <form
      class="c-form box-shadow"
    >
      <ul
        class="show-data"
      >
        <li
          class="title"
        >
          情報確認
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            アカウント名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            ntmhuong
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            グループ
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nhóm 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nguyễn Thị Mai Hương
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            カタカナ氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            名カナ
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            生年月日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            1983/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            メールアドレス
          </label>
          <div
            class="col-sm col-sm-10"
          >
            	ntmhuong@luvina.net
          </div>
        </li>
        <li
          class="form-group row d-flex  bor-none"
        >
          <label
            class="col-form-label col-sm-2"
          >
            電話番号
          </label>
          <div
            class="col-sm col-sm-10"
          >
            0914326386
          </div>
        </li>
        <li
          class="title mt-12"
        >
          <a
            href="#!"
          >
            日本語能力
          </a>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Trình độ tiếng nhật cấp 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格交付日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            失効日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            点数
          </label>
          <div
            class="col-sm col-sm-10"
          >
            290
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <div
            class="btn-group col-sm col-sm-10 ml"
          >
            <button
              class="btn btn-primary btn-sm"
              type="button"
            >
              編集
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              削除
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              戻る
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeEditPage unchanged 1`] = `
<div>
  <div
    class="row"
  >
    <form
      class="c-form box-shadow was-validated"
    >
      <ul>
        <li
          class="title"
        >
          会員情報編集
        </li>
        <li
          class="box-err"
        >
          <div
            class="box-err-content"
          >
            Hiển thị lỗi chung lại đây
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              アカウント名:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              グループ:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <select
              class="form-control"
            >
              <option>
                選択してください
              </option>
              <option>
                Nhóm 1
              </option>
              <option>
                Nhóm 2
              </option>
            </select>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              氏名:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              カタカナ氏名:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              required=""
              type="text"
            />
            <div
              class="invalid-feedback"
            >
              Example invalid form file feedback
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              生年月日:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10 d-flex"
          >
            <div
              class="datepicker-wrapper"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class=""
                    placeholder="yyyy/MM/dd"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="glyphicon glyphicon-calendar"
              />
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              メールアドレス:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              電話番号:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              パスワード:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              パスワード（確認）:
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="title mt-12"
        >
          <a
            href="#!"
          >
            日本語能力
          </a>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              資格:
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <select
              class="form-control"
            >
              <option>
                選択してください
              </option>
              <option>
                N 1
              </option>
              <option>
                N 2
              </option>
            </select>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              資格交付日:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10 d-flex"
          >
            <div
              class="datepicker-wrapper"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class=""
                    placeholder="yyyy/MM/dd"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="glyphicon glyphicon-calendar"
              />
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              失効日:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10 d-flex"
          >
            <div
              class="datepicker-wrapper"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class=""
                    placeholder="yyyy/MM/dd"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="glyphicon glyphicon-calendar"
              />
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              点数:
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <div
            class="btn-group col-sm col-sm-10 ml"
          >
            <button
              class="btn btn-primary btn-sm"
              type="button"
            >
              確認
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              戻る
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeListPage unchanged 1`] = `
<div>
  <div
    class="search-memb"
  >
    <h1
      class="title"
    >
      会員名称で会員を検索します。検索条件無しの場合は全て表示されます。
    </h1>
    <form
      class="c-form"
    >
      <ul
        class="d-flex"
      >
        <li
          class="form-group row"
        >
          <label
            class="col-form-label"
          >
            氏名:
          </label>
          <div
            class="col-sm"
          >
            <input
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row"
        >
          <label
            class="col-form-label"
          >
            グループ:
          </label>
          <div
            class="col-sm"
          >
            <select>
              <option>
                全て
              </option>
              <option>
                Nhóm 1
              </option>
              <option>
                Nhóm 2
              </option>
            </select>
          </div>
        </li>
        <li
          class="form-group row"
        >
          <div
            class="btn-group"
          >
            <button
              class="btn btn-primary btn-sm"
              type="button"
            >
              検索
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              新規追加
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
  <div
    class="row row-table"
  >
    <div
      class="css-grid-table box-shadow"
    >
      <div
        class="css-grid-table-header"
      >
        <div>
          ID
        </div>
        <div>
          氏名 ▲▽
        </div>
        <div>
          生年月日 ▲▽
        </div>
        <div>
          グループ
        </div>
        <div>
          メールアドレス
        </div>
        <div>
          電話番号
        </div>
        <div>
          日本語能力
        </div>
        <div>
          失効日 ▼△
        </div>
        <div>
          点数
        </div>
      </div>
      <div
        class="css-grid-table-body"
      >
        <div
          class="bor-l-none text-center"
        >
          <a
            href="/employees/detail"
          >
            1
          </a>
        </div>
        <div>
          Nguyễn Thị Mai Hương
        </div>
        <div>
          1983/07/08
        </div>
        <div>
          Phòng QAT
        </div>
        <div>
          ntmhuong@luvina.net
        </div>
        <div>
          0914326386
        </div>
        <div>
          Trình độ tiếng nhật cấp 4
        </div>
        <div>
          2011/07/08
        </div>
        <div>
          290
        </div>
        <div
          class="bor-l-none text-center"
        >
          <a
            href="/employees/detail"
          >
            2
          </a>
        </div>
        <div>
          Lê Thị Xoa
        </div>
        <div>
          1983/07/08
        </div>
        <div>
          Phòng DEV1
        </div>
        <div>
          xoalt@luvina.net
        </div>
        <div>
          1234567894
        </div>
        <div>
          Trình độ tiếng nhật cấp 4
        </div>
        <div>
          2011/07/08
        </div>
        <div>
          290
        </div>
        <div
          class="bor-l-none text-center"
        >
          <a
            href="/employees/detail"
          >
            3
          </a>
        </div>
        <div>
          Đặng Thị Hân
        </div>
        <div>
          1983/07/08
        </div>
        <div>
          Phòng QAT
        </div>
        <div>
          handt@luvina.net
        </div>
        <div>
          0914326386
        </div>
        <div>
          Trình độ tiếng nhật cấp 4
        </div>
        <div>
          2011/07/08
        </div>
        <div>
          290
        </div>
        <div
          class="bor-l-none text-center"
        >
          <a
            href="/employees/detail"
          >
            4
          </a>
        </div>
        <div>
          Lê Nghiêm Thủy
        </div>
        <div>
          1983/07/08
        </div>
        <div>
          Phòng DEV1
        </div>
        <div>
          thuyln@luvina.net
        </div>
        <div>
          1234567894
        </div>
        <div>
          Trình độ tiếng nhật cấp 4
        </div>
        <div>
          2011/07/08
        </div>
        <div>
          290
        </div>
        <div
          class="bor-l-none text-center"
        >
          <a
            href="/employees/detail"
          >
            5
          </a>
        </div>
        <div>
          Lê Phương Anh
        </div>
        <div>
          1983/07/08
        </div>
        <div>
          Phòng DEV1
        </div>
        <div>
          anhlp@luvina.net
        </div>
        <div>
          1234567894
        </div>
        <div>
          Trình độ tiếng nhật cấp 4
        </div>
        <div>
          2011/07/08
        </div>
        <div>
          290
        </div>
      </div>
      <div
        class="pagin"
      >
        <a
          class="btn btn-sm btn-pre btn-falcon-default btn-disabled"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-left fa-w-10"
            data-fa-i2svg=""
            data-icon="chevron-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="btn btn-sm text-primary btn-falcon-default"
          href="#"
        >
          1
        </a>
        <a
          class="btn btn-sm text-primary btn-falcon-default"
          href="#"
        >
          2
        </a>
        <a
          class="btn btn-sm text-primary btn-falcon-default"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-ellipsis-h fa-w-16"
            data-fa-i2svg=""
            data-icon="ellipsis-h"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="btn btn-sm text-primary btn-falcon-default"
          href="#"
        >
          15
        </a>
        <a
          class="btn btn-sm btn-next btn-falcon-default"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-right fa-w-10"
            data-fa-i2svg=""
            data-icon="chevron-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569 9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Page Snapshots renders HomePage unchanged and checks for redirection logic 1`] = `
<div>
  <div
    class="page"
  >
    <main
      class="main"
    >
      <img
        alt="Next.js logo"
        class="logo"
        data-nimg="1"
        decoding="async"
        height="20"
        src="/next.svg"
        style="color: transparent;"
        width="100"
      />
      <div
        class="intro"
      >
        <h1>
          To get started, edit the page.tsx file.
        </h1>
        <p>
          Looking for a starting point or more instructions? Head over to
           
          <a
            href="https://vercel.com/templates?framework=next.js&utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            rel="noopener noreferrer"
            target="_blank"
          >
            Templates
          </a>
           
          or the
           
          <a
            href="https://nextjs.org/learn?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learning
          </a>
           
          center.
        </p>
      </div>
      <div
        class="ctas"
      >
        <a
          class="secondary"
          href="https://nextjs.org/docs?utm_source=create-next-app&utm_medium=appdir-template&utm_campaign=create-next-app"
          rel="noopener noreferrer"
          target="_blank"
        >
          Documentation
        </a>
      </div>
    </main>
  </div>
</div>
`;

exports[`Page Snapshots renders RootLayout unchanged 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
    >
      <nav
        class="nav-bar"
      >
        <div
          class="content-main"
        >
          <div
            class="d-flex"
          >
            <a
              class="navbar-brand"
            >
              <img
                alt="logo"
                data-nimg="1"
                decoding="async"
                height="50"
                loading="lazy"
                src="/assets/images/Logo-Luvina.svg"
                style="color: transparent;"
                title="Logo"
                width="100"
              />
            </a>
            <h5
              class="title-brand mr-auto"
            >
              Luvina Software
            </h5>
            <ul
              class="navbar-nav flex-row d-flex"
            >
              <li
                class="nav-item"
              >
                <a
                  href="/employees/list"
                >
                  トップ
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  href="/logout"
                >
                  ログアウト
                </a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
      <div
        class="content"
      >
        <div
          class="content-main"
        >
          <div>
            Test Child
          </div>
        </div>
      </div>
      <footer
        class="footer"
      >
        <div
          class="content-main"
        >
          <p>
            Copyright © 2026 ルビナソフトウエア株式会社. All rights reserved.
          </p>
        </div>
      </footer>
    </div>
  </main>
</DocumentFragment>
`;
